# mirl

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  RAW_CHANGELOG.md  README.md  build.rs  common_concerns.md  crates.md  license  paths.py  stats.py  supported_crates.md  test_flags.py  todo.md  tomlfmt.toml
.cargo/: config.toml
.deprecated/: copyable_list.rs  minesweeper.rs
.deprecated/small_u/: u1.rs  u4.rs
.helpers/: commands.md  count_lines.py  display_dir.py  generate_range.py
.helpers/test/: targets.txt
.markdown/: crates.md  todo.md
.old/: cross.toml
.old/helpers/: Dockerfile.cross-x86_64  stats.py
.old/helpers/z_cache/: std.txt
.tests/mirl_codec_info/json/full_scale/: n_minus_in_number.json  n_object_missing_comma.json  n_plus_in_number.json
.tests/mirl_codec_info/json/simple/: 11_dict.json  16_complex.json
.unused/: README.md
.unused/files/: discord.rs  found_value.rs  scrollable_area.rs  skip_text_type.rs  traceback.rs
.unused/files/mouse_position/: windows.rs
.workspace/helpers/: display_dir.py  sub_modules.py
.workspace/helpers/test/: checks.txt
.workspace/markdown/: crates.md  guidelines.md
.workspace/old/: std.txt
.workspace/old/helpers/: files.sh  paths.py  search_for_unimpl.py  test_flags.py
.workspace/tests/mirl_codec_info/: css.css
.workspace/tests/mirl_codec_info/json/full_scale/: n_object_is_list.json
.workspace/tests/mirl_codec_info/json/simple/: 10_list_deep.json  13_dict_complex.json  14_nesting.json  15_escaping.json  3_minus_integer.json  4_float.json  8_list_elements.json
.workspace/unused/: README.md
.workspace/unused/files/: clone_any.rs  screen_normalizer.rs
.workspace/unused/files/deprecated/: README.md
.workspace/unused/files/mouse_position/: mod.rs
deprecated/mirl_consts/: Cargo.toml
deprecated/mirl_consts/src/: lib.rs  time.rs
helpers/: search_functions.py  test_flags.py
src/: __init__.rs  compile_time_dependency_errors.rs  console.rs  dependencies.rs  dictionary.rs  extensions.rs  graphics.rs  lib.rs  lists.rs  math.rs  misc.rs  prelude.rs  render.rs  settings.rs  time.rs
src/constants/: bytes.rs  mod.rs
src/directions/: all.rs  cardinal.rs  direction.rs  directions_with_none.rs  extended.rs  misc.rs  mod.rs  special.rs
src/extensions/: _generate.py  _tuple.rs  cell.rs  char.rs  error.rs  generate.py  lists.rs  macro_fun.rs  math.rs  mod.rs  panic.rs  range.rs  repeat.rs  small_u_support.rs  string.rs  tuple.rs  u1.rs  u2.rs  u4.rs
src/extensions/conversion/: mod.rs
src/extensions/conversion/from_patch/: mod.rs  string.rs  vec.rs
src/extensions/conversion/try_from_patch/: map.rs  mod.rs  string.rs  vec.rs
src/extensions/lists/: helper_functions_list.rs  mod.rs  sparse_vec.rs
src/extensions/math/: from.rs  mod.rs  tests.rs
src/extensions/string/: text_position.rs
src/extensions/try_from_patch/: map.rs  mod.rs  string.rs  vec.rs
src/extensions/try_from_patch/numbers/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/extensions/tuple/: compare.rs  const_conversion.rs  conversion.rs  mod.rs  tuple_generate_conversion.py  tuple_generate_math.py  tuple_generate_saturated_math.py
src/extensions/tuple/conversion/: into.rs  try_into.rs
src/extensions/tuple/tuple_math/: mod.rs  ops.rs  saturating.rs
src/extensions/tuple/tuple_math/auto/: abs.rs  (+4 more)
src/graphics/: color_presets.rs  imagery.rs  interpolation.rs  mod.rs  pixel.rs  random.rs
src/lists/: copyable_list.rs  mod.rs
src/math/: collision.rs  const_partial_ord.rs  mod.rs  positioning.rs  uniform_range.rs
src/math/collision/: circle.rs  mod.rs  rectangle.rs
src/math/expressions/d2/: linear.rs  storage.rs
src/math/geometry/: mod.rs  positioning.rs  rotation.rs  scrapped.rs
src/math/geometry/d2/: circle.rs  rectangle.rs
src/misc/: codec.rs  copyable_list.rs  discord.rs  keybinds.rs  map_extension.rs  minesweeper.rs  mod.rs  scene.rs  scrollable_container.rs  skipping_text_type.rs  text_position.rs
src/network/: discord.rs  mod.rs
src/platform/: cursors.rs  file_data.rs  framework_traits.rs  glfw.rs  keycodes.rs  minifb.rs  mod.rs  other.rs  shared.rs  time.rs
src/platform/buffer/: collision_support.rs  draw.rs  get_converted.rs  get_pixel.rs  manipulate.rs  misc.rs  mod.rs  new.rs  set_color.rs  set_pixel.rs  trim.rs
src/platform/buffer/const_buffer/: mod.rs
src/platform/cursors/: cursor_glfw.rs  cursors_windows.rs  mod.rs
src/platform/file_system/: file_data.rs  file_system_traits.rs  get_os_font.rs  mod.rs  native.rs
src/platform/frameworks/: errors.rs  glfw.rs  minifb.rs  mod.rs
src/platform/frameworks/traits/: control.rs  cursors.rs  helper.rs  input.rs  mod.rs  windowing.rs
src/platform/keyboard/: mod.rs  windows.rs
src/platform/mouse/: cursor_glfw.rs  cursors_windows.rs  mod.rs
src/platform/mouse/position/: mod.rs  windows.rs
src/platform/shared/: mod.rs  windows.rs
src/platform/windowing/: console.rs  errors.rs  glfw.rs  minifb.rs  mod.rs
src/platform/windowing/traits/: cursors.rs  helper.rs  input.rs  mod.rs  timing.rs  windowing.rs
src/render/: extra.rs  fancy.rs  fast.rs  image_support.rs  mod.rs
src/render/buffer/: collision_support.rs  draw.rs  get_converted.rs  get_pixel.rs  manipulate.rs  misc.rs  mod.rs  set_color.rs  set_pixel.rs  trim.rs
src/render/const_buffer/: collision_support.rs  draw.rs  get_converted.rs  get_pixel.rs  manipulate.rs  misc.rs  mod.rs  new.rs  set_color.rs  set_pixel.rs  trim.rs
src/render/rendering/: buffer_compatibility.rs  buffer_type.rs  circle.rs  circle_outline.rs  line.rs  mod.rs  rectangle.rs  text.rs
src/render/rendering/text/: aliased.rs  antialiased.rs  mod.rs
src/render/rendering/texture/: mod.rs
src/render/rendering/triangle/: mod.rs
src/system/: mod.rs  windows.rs
src/system/action/: linux.rs  linux_actions.rs  mac_actions.rs  miri_actions.rs  mod.rs  web_actions.rs  windows.rs  windows_actions.rs
src/system/deprecated/: mod.rs  web.rs  windows.rs
src/system/info/: linux.rs  mod.rs  web.rs  windows.rs
src/text/: mod.rs  position.rs
(+34 files in other folders)
