[package]
# General Info
name = "mirl"
version = "7.1.2"
description = "Miners Rust Lib - A massive collection of ever growing and changing functions, structs, and enums. Check the description for compatibility and toggleable features! (Most of the lib is controlled by flags/features so the lib can continue to be lightweight despite its size)"
# Compiler
rust-version = "1.88.0"
edition = "2021"
# Credit/Misc
license = "MIT"
authors = ["Miner3D"]
keywords = ["utilities", "graphics", "windowing", "extensions", "system"]
repository = "https://github.com/Miner3D-Gamer/mirl"
# Keep cursor files when uploading
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/**",
    "src/platform/cursors/svg/*.svg",
]
exclude = ["**/_*", "**/*.py"]

[dependencies]
# For locking/releasing a global variable (Font rendering)
parking_lot = { version = ">=0.12", optional = true, default-features = false }
# Enum stuff - Used for iterating the keycodes
strum = { version = ">=0.26", optional = true, default-features = false }
strum_macros = { version = ">=0.26", optional = true, default-features = false }

# For random numbers
rand = { version = ">=0.9.2", optional = true, default-features = false, features = [
    "thread_rng",
] }

device_query = { version = ">=4.0.0", optional = true, default-features = false }

# For detecting key strokes
# Discord stuff
reqwest = { version = ">=0.12", features = [
    "json",
    "blocking",
], optional = true, default-features = false }
serde_json = { version = ">=1.0", optional = true, default-features = false }
serde = { version = ">=1.0", optional = true, default-features = false }

# Needed for glyph cache
once_cell = { version = ">=1.4", optional = true, default-features = false }
# Font lib
fontdue = { version = ">=0.9.3", optional = true, default-features = false }
font-kit = { version = "0.11", optional = true, default-features = false, features = [
    "source",
] }


# Rasterize SVG
resvg = { version = ">=0.45.1", optional = true, default-features = false }


# Other window stuff
raw-window-handle = { version = ">=0.6.2", optional = true, default-features = false }


# graphics & render
image = { version = ">=0.25.6", optional = true, default-features = false }


# This lib is pretty useful
num-traits = { version = ">=0.2", optional = true }

# system
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Memory",
], optional = true }
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "shellapi",
    "libloaderapi",
    "minwindef",
    "windef",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { "version" = ">=2.18.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# # console
# crossterm = ">=0.28"

# Fast hashing, used by texture manager
ahash = { version = ">=0.8.12", optional = true, default-features = false, features = [
    "std",
] }

# Create temp files, used by icon changing function
tempfile = { version = ">=3", optional = true, default-features = false }

# MiniFB
minifb = { "version" = ">=0.28.0", optional = true }

# GLFW
glfw = { version = "0.51.0", optional = true }

gl = { version = "0.14.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
#getrandom = { version = "0.3", features = ["wasm_js"] }


# Unused
#minifb = "0.27.0"
# # Make a const value be calculated at compile time
# lazy_static = "1.4"
# # Macro thingy
# paste = "1.0.15"

[features]
# Features enabled by default
default = ["texture_manager_cleanup", "num_traits"]
# Image lib support
imagery = ["dep:image"]
# # Linux wayland support (Not yet supported)
# wayland = []
# Extra cleanup functions for the texture manager
texture_manager_cleanup = ["std"]
# If ahash::AHashMap should be used rather than std::collection::HashMap
ahash = ["dep:ahash", "std"]
# SVG/resvg support
svg = ["dep:resvg", "dep:tempfile"]
# Enable all available backends
all_backends = ["minifb", "glfw", "font_support"]
# Framework backend using minifb (NOT COMPATIBLE WITH WEB)
minifb = ["dep:minifb", "system", "keycodes", "keyboard_query", "svg", "std"]
# Framework backend using glfw (NOT COMPATIBLE WITH WEB)
glfw = ["dep:glfw", "dep:gl", "system", "keycodes", "std"]
# Low level system interactions
system = ["x11", "dep:windows", "dep:winapi", "dep:raw-window-handle", "std"]
# Font/fontdue support
font_support = [
    "dep:fontdue",
    "dep:once_cell",
    "dep:font-kit",
    "std",
    "dep:parking_lot",
]
# Enable all features that add content
all = ["default", "imagery", "all_backends", "discord", "random"]
# Support for interacting with they keyboard
keycodes = ["dep:strum", "dep:strum_macros", "std"]
# Support for pulling the current state of the keyboard
keyboard_query = ["dep:device_query", "std"]
# A debug option for showing where the current cursor style will click
cursor_show_hotspot = []
# # Enables some extra rendering features for some structs
# dear_mirl_gui_support = ["dear_mirl_gui"]
discord = ["dep:serde_json", "dep:reqwest", "dep:serde", "std"]
# Unlock functions that expand on randomness
random = ["dep:rand", "std"]
# Unbind rust from any os specific features
std = []
# # If nightly features are to be enabled
# nightly = []
num_traits = ["dep:num-traits", "std"]


# Get the current state of the keyboard
[lib]
name = "mirl"
path = "src/lib.rs"

# [build-dependencies]
# rustc_version = "0.4"
