[package]
# General Info
name = "mirl"
version = "9.1.0"
description = "Miners Rust Lib - A massive collection of ever growing and changing functions, structs, and enums. Check the description for compatibility and toggleable features! (Most of the lib is controlled by flags/features so the lib can continue to be lightweight despite its size)"
# Compiler
rust-version = "1.88.0"
edition = "2021"
# Credit/Misc
license = "MIT"
authors = ["Miner3D"]
keywords = ["utilities", "graphics", "windowing", "extensions", "system"]
repository = "https://github.com/Miner3D-Gamer/mirl"
# Keep cursor files when uploading
include = [
    "Cargo.toml",
    "license",
    "src/**",
    "README.md",
    "CHANGELOG.md",
    "RAW_CHANGELOG.md",
    "build.rs",
] # Should these last two be included?

categories = ["no-std", "graphics", "mathematics", "rendering"]

[dependencies]
# For locking/releasing a global variable (Font rendering)
parking_lot = { version = ">=0.12", optional = true, default-features = false }
# Enum stuff - Used for iterating the keycodes
strum = { version = ">=0.26", optional = true, default-features = false }
strum_macros = { version = ">=0.26", optional = true, default-features = false }
# Macro stuff
pastey = { version = "0.2.1", optional = true }
# Console stuff
crossterm = { version = ">=0.29.0", optional = true }
# Json stuff
serde_json = { version = ">=1.0", optional = true, default-features = false, features = [
    "std",
] }
# Decode/Encoding stuff
serde = { version = ">=1.0", optional = true, default-features = false }

# Needed for glyph cache
once_cell = { version = ">=1.4", optional = true, default-features = false }
# Font lib
fontdue = { version = ">=0.9.3", optional = true, default-features = false }


# Rasterize SVG
resvg = { version = ">=0.45.1", optional = true, default-features = false }


# Other window stuff
raw-window-handle = { version = ">=0.6.2", optional = true, default-features = false }


# graphics & render
image = { version = ">=0.25.6", optional = true, default-features = false }
indexmap = { version = "2.12.1", optional = true, default-features = false, features = [
    "std",
] }


# This lib is pretty useless - Extra support for num-traits
[dependencies.num-traits]
version = ">=0.2"
default-features = false
optional = true
features = ["std"]

# system
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Memory",
], optional = true }
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "shellapi",
    "libloaderapi",
    "minwindef",
    "windef",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { "version" = ">=2.18.0", optional = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# For detecting key strokes
device_query = { version = ">=4.0.0", optional = true, default-features = false }

# Discord stuff
reqwest = { version = ">=0.12", features = [
    "json",
    "blocking",
], optional = true, default-features = false }
# Fast hashing, used by texture manager
ahash = { version = ">=0.8.12", optional = true, default-features = false, features = [
    "std",
] }

# Create temp files, used by icon changing function
tempfile = { version = ">=3", optional = true, default-features = false }


# GLFW
glfw = { version = "0.51.0", optional = true }

gl = { version = "0.14.0", optional = true }
# For random numbers
rand = { version = ">=0.9.2", optional = true, default-features = false, features = [
    "thread_rng",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = ">=0.3", features = ["Window"] }
#getrandom = { version = "0.3", features = ["wasm_js"] }
#, feature="mac_cc_installed"
[target.'cfg(all(any(not(target_os = "macos")), not(target_arch = "wasm32")))'.dependencies]
# MiniFB
minifb = { "version" = ">=0.28.0", optional = true }

[target.'cfg(all(not(target_os = "linux"), not(target_arch = "wasm32")))'.dependencies]
font-kit = { version = "0.11", optional = true, default-features = false, features = [
    "source",
] }
# Unused
#minifb = "0.27.0"
# # Make a const value be calculated at compile time
# lazy_static = "1.4"
# # Macro thingy

[features]
# Features enabled by default
default = ["std"]
# Image lib support
imagery = ["dep:image"]
# # Linux wayland support (Not yet supported)
# wayland = []
# Extra cleanup functions for the texture manager
texture_manager_cleanup = ["std"]
# If ahash::AHashMap should be used rather than std::collection::HashMap
ahash = ["dep:ahash", "std"]
# SVG/resvg support
svg = ["dep:resvg", "dep:tempfile"]
# Enable all available backends
all_backends = ["minifb", "glfw", "font_support", "console"]
# Framework backend using minifb (NOT COMPATIBLE WITH WEB)
minifb = ["dep:minifb", "system", "keycodes", "keyboard_query", "svg", "std"]
# Framework backend using glfw (NOT COMPATIBLE WITH WEB)
glfw = ["dep:glfw", "dep:gl", "system", "keycodes", "std"]
# Low level system interactions
system = ["x11", "dep:windows", "dep:winapi", "dep:raw-window-handle", "std"]
# Font/fontdue support
font_support = [
    "dep:fontdue",
    "dep:once_cell",
    "dep:font-kit",
    "std",
    "dep:parking_lot",
]
# Enable all features that add content
all = [
    "default",
    "imagery",
    "all_backends",
    "discord",
    "random",
    "console",
    "num_traits_with_std",
    "serde",
    "internal_use_ahash",
    "internal_use_indexmap",
]
# Support for interacting with they keyboard
keycodes = ["dep:strum", "dep:strum_macros", "std"]
# Support for pulling the current state of the keyboard
keyboard_query = ["dep:device_query", "std"]
# A debug option for showing where the current cursor style will click
cursor_show_hotspot = []
# # Enables some extra rendering features for some structs
# dear_mirl_gui_support = ["dear_mirl_gui"]
discord = ["dep:serde_json", "dep:reqwest", "dep:serde", "std"]
# Unlock functions that expand on randomness
random = ["dep:rand", "std"]
# Unbind rust from any os specific features
std = []
# Num traits allows for less hardcoded number stuff
num_traits = ["dep:num-traits"]
# # Activate when on MacOs and a c compiler is installed
# # Otherwise libraries like minifb will not be able to compile
# mac_cc_installed = []
# Set this flag if you are using miri
miri = []
console = ["dep:crossterm"]
# Alright, this is stupid
num_traits_with_std = ["num-traits/std", "num_traits", "std"]
# A flag required when wanting to test this lib
test = ["dep:pastey"]
# Support for serde
serde = ["serde/derive", "serde/std", "std"]
# Support for indexmap
indexmap = ["dep:indexmap", "std"]
# If any hash builder should be replaced with the hash builder of ahash
internal_use_ahash = ["ahash"]
# If any reference to std::collection::HashMap should be replaced with indexmap::IndexMap
internal_use_indexmap = ["indexmap"]


# Get the current state of the keyboard
[lib]
name = "mirl"
path = "src/lib.rs"

# [build-dependencies]
# rustc_version = "0.4"
[profile.release]
lto = true

[build-dependencies]
version_check = "0.9"
